--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+  <div class="score">
+    <h2>Score</h2>
+    <div class="count">
+      <h3 class="green">You Win!</h3>
+      <p id="win">0</p>
+    </div>
+    <div class="count">
+      <h3 class="red">You Lose!</h3>
+      <p id="lose">0</p>
+    </div>
+    <div style="clear:both;"></div>
+  </div>
+
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
